fixed email address

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">jeffginsberg87@gmail.com</a>
+											<a href="#">jeff@jg-dev.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
