--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 							<h2>Get in touch</h2>
 							<p>I would love to see if I am the right developer for you. If not, I would be happy to point you in the direction of a team that is.</p>
 							<div class="split style1">
-								<section>
+								<!-- <section>
 									<form method="post" action="#">
 										<div class="field half first">
 											<label for="name">Name</label>
@@ -156,7 +156,7 @@
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
-								</section>
+								</section> -->
 								<section>
 									<ul class="contact">
 										<li>
