--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
+								<li><a href="#three" class="button">Contact Me</a></li>
 							</ul>
 						</div>
 					</section>
